# principia

./: .gitignore  AGENT_INSTRUCTIONS.md  LICENSE  README.md  __init__.py  circle.py  load.py  load_circle.py  main.py  pyproject.toml  train.py  visualise.py
.github/workflows/: tests.yml
demos/: circle.py  circle_network.py  circle_network_cheb.py  circle_network_rbf.py  demo_autograd.py  linear_network.py  load.py  load_circle.py  sin_network.py  spiral_network..ipynb  spiral_network_cheb.py  spiral_network_rbf.py  visualise.py  visualise_circle.py  visualise_xor.py  xor.py
demos/v1/: circle.py  demo_autograd.py  load.py  load_circle.py  visualise_circle.py  visualise_xor.py  xor.py
engine/: ChebLayer.py  KAN.py  KANLayer.py  adam_optim.py  cheb_layer.py  layer.py  linear.py  model.py  module.py  mse.py  rbf_edge.py  rbf_layer.py  sequential.py  tensor.py  value.py
engine/v1/: layer.py  model.py  optim.py  rbf_edge.py  value.py
principia/: __init__.py
principia.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_layer.py  test_model.py  test_nn.py  test_optim.py  test_rbf_edge.py  test_sequential.py  test_tensor.py  test_value.py
tests/v1/: test_layer.py  test_model.py  test_optim.py  test_rbf_edge.py
